# target_9

./: CMakeLists.txt  README.md  gamelogic.cpp  gamelogic.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
headers/: gamelogic.h  mainwindow.h  stack.h
include/: gamelogic.h  gamelogic.hpp  hoverbutton.h  hoverbutton.hpp  mainwindow.h  mainwindow.hpp  stack.hpp
src/: gamelogic.cpp  main.cpp  mainwindow.cpp
tests/: test_gamelogic_decrementMove.cpp  test_gamelogic_makeMove.cpp  test_gamelogic_undoMove.cpp
ui/: mainwindow.ui
